Hide toolbar & overflow fix

--- a/web/css/discovery-rs.css
+++ b/web/css/discovery-rs.css
@@ -9,18 +9,29 @@ html, body {
     text-rendering: optimizeLegibility;
 }
 
-#title {
-    text-align: center;
+#sidepanel {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0;
+    width: 220px;
+}
+
+#logo {
+    padding: 0 12px;
+    font-weight: bold;
+    color: white;
+    outline: none;
+    height: 40px;
+    font-size: 1.3em;
+    background-color: rgb(32, 32, 32);
+    opacity: 0.8;
 }
 
 #toolbar {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 200px;
-    max-height: 100%;
+    max-height: calc(100vh - 40px);
     overflow-y: auto;
-    padding: 5px;
+    padding: 0px 5px 5px;
     color: white;
     background-color: rgb(32, 32, 32);
     opacity: 0.8;
